deployment-v2-replicas.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-replicas
  labels:
    app: myapp-k8s
    env: prod
spec:
  replicas: 4
  selector:
    matchLabels:
      app: myapp-pod-replicas
  template:
    metadata:
      labels:
        app: myapp-pod-replicas
    spec:
      containers:
      - name: myapp-container
        image: nginx
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
