flask-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main
  namespace: Flask-Prod
spec:
  selector:
    matchLabels:
      app: main
      env: prod
  template:
    metadata:
      labels:
        project: flask
    spec:
      containers:
      - name: myapp
        image: gitlab.com/verhovensky/flask
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
