secret_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goapp-deployment
  namespace: lesson16
  labels:
    app: goapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: goapp
  template:
    metadata:
      labels:
        app: goapp
    spec:        
      containers:
      - name: web
        image: ksxack/lesson1:v0.2
        ports:
        - containerPort: 8080
