NodePort.yml
apiVersion: v1
kind: Service
metadata: 
 name: nodeport-goapp-service
 namespace: lesson14
selector:   
 app: goapp
spec:
 type: NodePort
 ports: 
 - name: http
   port: 80
   targetPort: 8080
   nodePort: 30050
   protocol: TCP
