ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  rules:
  - host: "app.example.ru"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: main
            port: 
              number: 80
